fix overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,6 +32,7 @@
 }
 
 .container {
+    overflow: auto;
     background-color: #001624;
     height: 100%;
     width: 100%;
